# policyengine-ng

./: .buildinfo  CHANGELOG.md  MANIFEST.in  Makefile  README.md  changelog.yaml  changelog_entry.yaml  genindex.html  intro.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/: get-changelog-diff.sh  update_api.py
.github/workflows/: pr.yaml  push.yaml
_sources/: intro.md
changelog.d/: use-reusable-workflows.changed.md
docs/: _config.yml  _toc.yml  api_utils.py  demo.py  requirements.txt
docs/.streamlit/: config.toml
policyengine_ng/: __init__.py  entities.py  model_api.py  modelled_policies.yaml
policyengine_ng/parameters/: tax_rate.yaml
policyengine_ng/parameters/gov/: tax_rate.yaml
policyengine_ng/parameters/gov/tax/: main_rates.yaml  minimum.yaml
policyengine_ng/parameters/simulation/: marginal_tax_rate_adults.yaml
policyengine_ng/parameters/tax/: exempt_threshold.yaml  main_rates.yaml  minimum.yaml
policyengine_ng/parameters/tax/consolidated_relief_allowance/: flat.yaml  percent.yaml
policyengine_ng/tests/: integration.yaml  market_income.yaml  tax.yaml
policyengine_ng/tests/tax/: consolidated_relief_allowance.yaml  is_tax_exempt.yaml  main_tax_rates.yaml  minimum_tax.yaml  tax.yaml  taxable_income.yaml
policyengine_ng/variables/: age.py  employment_income.py  gross_income.py  household_benefits.py  household_market_income.py  household_net_income.py  household_tax.py  is_adult.py  marginal_tax_rate.py  market_income.py  tax.py
policyengine_ng/variables/input/demographic/: README.md  gender.py
policyengine_ng/variables/input/household/: age.py
policyengine_ng/variables/tax/: consolidated_relief_allowance.py  is_tax_exempt.py  main_tax_rates.py  minimum_tax.py  taxable_income.py
